# Weather_Station_Server

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Jenkinsfile  README.md  compile.sh  install_lib.sh  project_version.h.in
include/: client.h  config.h  handler.h  server.h
include/utils/: non_copyable.h  non_movable.h  safe_queue.h  singleton.h
source/: client.cpp  config.cpp  handler.cpp  main.cpp  server.cpp
